objects/Entitlement__x.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <externalDeveloperName>AssetId</externalDeveloperName>
        <label>Asset ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Record_Type_c__c</fullName>
        <externalDeveloperName>Asset_Record_Type__c</externalDeveloperName>
        <inlineHelpText>Record Type of the Asset</inlineHelpText>
        <label>Asset Record Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BusinessHoursId__c</fullName>
        <externalDeveloperName>BusinessHoursId</externalDeveloperName>
        <label>Business Hours ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CasesPerEntitlement__c</fullName>
        <externalDeveloperName>CasesPerEntitlement</externalDeveloperName>
        <label>Case Per Entitlement</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractLineItemId__c</fullName>
        <externalDeveloperName>ContractLineItemId</externalDeveloperName>
        <label>Contract Line Item ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Default_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Default__c</externalDeveloperName>
        <label>Default</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_c__c</fullName>
        <externalDeveloperName>Description__c</externalDeveloperName>
        <label>Description</label>
        <length>32768</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <externalDeveloperName>EndDate</externalDeveloperName>
        <label>End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPerIncident__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPerIncident</externalDeveloperName>
        <label>Per Incident</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Entitlement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldMaterialNumber_c__c</fullName>
        <externalDeveloperName>OldMaterialNumber__c</externalDeveloperName>
        <label>Old Material Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OptionsDescriptionPreview_c__c</fullName>
        <externalDeveloperName>OptionsDescriptionPreview__c</externalDeveloperName>
        <inlineHelpText>List of options subscribed (preview of 255 first characters).</inlineHelpText>
        <label>Options Description (preview)</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptionsList_c__c</fullName>
        <externalDeveloperName>OptionsList__c</externalDeveloperName>
        <inlineHelpText>List of options subscribed</inlineHelpText>
        <label>Options List</label>
        <length>32768</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RemainingCases__c</fullName>
        <externalDeveloperName>RemainingCases</externalDeveloperName>
        <label>Remaining Case</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Asset_Number_c__c</fullName>
        <externalDeveloperName>SAP_Asset_Number__c</externalDeveloperName>
        <inlineHelpText>SAP Asset Number of the Asset</inlineHelpText>
        <label>SAP Asset Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_EntitlementKey_c__c</fullName>
        <externalDeveloperName>SAP_EntitlementKey__c</externalDeveloperName>
        <label>SAP Entitlement Key</label>
        <length>100</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContractId__c</fullName>
        <externalDeveloperName>ServiceContractId</externalDeveloperName>
        <label>Service Contract ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToLocation_c__c</fullName>
        <externalDeveloperName>ShipToLocation__c</externalDeveloperName>
        <inlineHelpText>The ship-to location of the Entitlement (if the entitlement is specific to a ship-to location).</inlineHelpText>
        <label>Ship-to Location</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlaProcessId__c</fullName>
        <externalDeveloperName>SlaProcessId</externalDeveloperName>
        <label>Entitlement Process ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <externalDeveloperName>StartDate</externalDeveloperName>
        <label>Start Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusType_c__c</fullName>
        <externalDeveloperName>StatusType__c</externalDeveloperName>
        <inlineHelpText>Utilized to sort correctly (by Status and Type) Entitlement related list in Assets</inlineHelpText>
        <label>Status/Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SvcApptBookingWindowsId__c</fullName>
        <externalDeveloperName>SvcApptBookingWindowsId</externalDeveloperName>
        <label>Operating Hour ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_SAPAssetNumber_c__c</fullName>
        <externalDeveloperName>Tech_SAPAssetNumber__c</externalDeveloperName>
        <label>Tech_SAP Asset Number</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Additional services</fullName>
                </value>
                <value>
                    <fullName>Service Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActive_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isActive__c</externalDeveloperName>
        <inlineHelpText>If checked, the Entitlement is Active.
Tech field In order to reference isActive as a condition in Case.Entitlement lookup filter.</inlineHelpText>
        <label>isActive</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUpcoming_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isUpcoming__c</externalDeveloperName>
        <label>isUpcoming</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>Entitlement</externalName>
    <label>Entitlement</label>
    <pluralLabel>Entitlements</pluralLabel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>